--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 header{
-    background-color: #696969;
+    background-color: #faeef1;
 }
 footer{
-    background-color: #696969;
+    background-color:#faeef1;
     text-align: center;
 }
 h2{
     text-align: center;
+     
 }
+
