--- a/style.css
+++ b/style.css
@@ -9,4 +9,33 @@ h2{
     text-align: center;
      
 }
+body{
+    font-family: Arial,sans-serif;
+    margin:0;
+    padding:0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+header{
+    display: flex;
+    align-items: center;
+    background-color: #faeef1;
+    color: #c95c77;
+   padding: 20px 40px;
+}
+#logo-Empresa{
+    margin-right: 20px;
+    height: 50px;
+
+}
+header h1{margin: 0;}
+nav ul {list-style: none;
+    padding: 0;}
+nav ul{display: inline;
+    margin-left: 20px;}
+nav ul li a {color: #faeef1;
+       text-decoration: none;
+    }
+
 
