--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ nav ul {list-style: none;
     padding: 0;}
 nav ul{display: inline;
     margin-left: 20px;}
-nav ul li a {color: #faeef1;
+nav ul li a {color: #c95c77;
        text-decoration: none;
     }
 
