--- a/style.css
+++ b/style.css
@@ -38,4 +38,18 @@ nav ul li a {color: #c95c77;
        text-decoration: none;
     }
 
+    main{
+        flex: 1;
+        text-align: center;
+        padding: 20px;
+    }
+
+    footer{
+        background-color: #c95c77;
+        text-align:center ;
+        padding: 20px;
+        margin-top: auto;
+    }
+
+    
 
