--- a/style2.css
+++ b/style2.css
@@ -7,7 +7,7 @@ h1,h2{
 }
 
 ul{
-    list-style-type: :none;
+    list-style-type: none;
     padding: 0;
 }
 
@@ -22,3 +22,10 @@ li{
 li:hover{
     background-color: #d3748c;
 }
+
+#imagem-item {
+    max-width:100% ;
+    height:auto ;
+    margin-top:20px ;
+}
+    
